Terceira parte trabalho 2

--- a/src/main/resources/static/jogoGeneral.html
+++ b/src/main/resources/static/jogoGeneral.html
@@ -16,6 +16,7 @@
     <div class="button-container">
         <div class="button-column-left">
             <div class="button" id="roll-button"><i class="fa-solid fa-dice" style="color: #000000;"></i> Executar rodada</div>
+            <div class="cartoon-wood-button" id="valorAposta"><input class="cartoonWoodInput" id="valorApostaInput" placeholder="Valor da aposta" type="number"></div>
         </div>
         <div class="scene">
             <div class="cube">
