Adicionado quinta parte trabalho 2

--- a/src/main/resources/static/jogoGeneral.html
+++ b/src/main/resources/static/jogoGeneral.html
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="button-column-right">
-            <div class="button" href="index.html" id="voltarAplicacao"><i class="fa-regular fa-hand-point-left" style="color: #000000;"></i> Voltar</div>
+            <div class="button" id="voltarAplicacao"><i class="fa-regular fa-hand-point-left" style="color: #000000;"></i> Voltar</div>
         </div>
     </div>
     <div class="modal" id="modal-escolhas">
