--- a/src/main/resources/static/EscolhaJogo.html
+++ b/src/main/resources/static/EscolhaJogo.html
@@ -12,12 +12,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 </head>
 <body>
-    <div id="botoes">
-        <p class="line typing-animation">Escolha seu Jogo!</p>
-        <a href="pagina1.html"><button class="botao">Jogo de Azar</button></a>
-        <a href="jogoGeneral.html"><button class="botao">Jogo General</button></a>
+    <div class="infos">
+        <p id="jogador-escolha-jogo" class="line typing-animation"></p>
+        <p id="saldo-escolha-jogo" class="line typing-animation">Saldo: R$ </p>
     </div>
-    <script src="EscolhaJogo.js.js"></script>
+    <div class="botoes">
+        <p class="line typing-animation">Escolha seu Jogo!</p>
+        <a href="JogoAzar.html"><button id="botao-azar" class="botao">Jogo de Azar</button></a>
+        <a href="jogoGeneral.html"><button id="botao-general" class="botao">Jogo General</button></a>
+    </div>
+    <script src="EscolhaJogo.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
